# LPMDataset

./: .envrc  .envrc.example  .gitignore  LSTM.py  Mouse_model.py  mouse_only_model_lr0.001.pth  mouse_only_unimodal_model_lr0.001.pth  ocr_asr_model.pth  ocr_model.py  ocr_only_unimodal_model_lr0.001.pth  pyproject.toml  shared.py
preprocessing/: extract_frames_only.py
src/lpmdataset/modalities/: mouse.py  ocr.py
src/lpmdataset/models/: CLIp.py  Mouse_model.py  evaluate_ocr_model.py  ocr_asr_model.py  ocr_model.py  shared.py
src/lpmdataset/representations/: heatmap.py
src/stats/: dataset_analysis.py
