[project]
name = "lpmdataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.6.0",
    "matplotlib==3.10.7",
    "opencv-python==4.13.0.92",
    "pandas==2.3.3",
    "pytest==7.1.2",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
    "wordcloud==1.9.6",
    "yt-dlp==2026.2.4",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"
